# datapilot-ai

./: .gitignore  README.md  pyproject.toml
clients/llm/: gemini_client.py  ollama_client.py
config/: settings.py
context/: __init__.py  project_context.py
crew/: ai_consulting_crew.py
crew/agents/: data_scientist_agent.py
crew/crews/: ai_consulting_crew.py
crew/tasks/: dataset_understanding_task.py
data/: customer_churn.csv  employee_attrition.csv
docs/: engineering-notes.md
examples/: crew_example.py  dataset_service_example.py  gemini_client_example.py  test_ollama.py
models/: __init__.py  analysis_plan.py  business_insight_result.py  candidate_model.py  data_quality_result.py  dataset_info.py  dataset_understanding.py  eda_result.py  explainability_result.py  feature_engineering_result.py  model_evaluation_result.py  model_training_result.py  target_suggestion.py
models/enums/: problem_type.py
prompts/templates/: analysis_planning_prompt.py  business_insight_prompt.py  dataset_understanding_prompt.py  target_identification_prompt.py
services/ai/: base_ai_service.py
services/business_insight/: business_insight_service.py
services/dataset/: data_quality_service.py  dataset_service.py  metadata_service.py
services/evaluation/: model_evaluation_service.py
services/explainability/: explainability_service.py
services/planning/: ai_analysis_planner.py  analysis_planner.py
services/training/: model_factory.py  model_training_service.py
services/understanding/: ai_target_identification_service.py  (+3 more)
workflow/: datapilot_workflow.py
(+5 files in other folders)
