[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datapilot-ai"
version = "0.1.0"
description = "An Agentic AI platform for automated data science workflows."
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "pydantic",
]

[tool.setuptools.packages.find]
include = ["models*", "services*", "workflow*", "crew*", "context*"]